force-app/main/default/objects/vlocity_ins__PartyRelationshipType__c/vlocity_ins__PartyRelationshipType__c.object-meta.xml
<CustomObject>
    <description>Party Relationship Types store the relationship types for contacts, accounts or households. For example, this might be Head of Household, CEO, or Board Member. This object defines the type of relationship between two parties: a source and target. For example, &quot;{SOURCE} is a manager for {TARGET}.&quot;</description>
    <label>Vlocity Party Relationship Type</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Source Role</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Party Relationship Types</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>