force-app/main/default/objects/vlocity_ins__PartyRelationshipType__c/fields/vlocity_ins__Color__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Color__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Color Value in Hexadecimal Format (e.g. #FFFFFF)</inlineHelpText>
    <label>Color</label>
    <length>7</length>
    <required>true</required>
    <type>Text</type>
</CustomField>